feat(openapi): update environment to be query param
